--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.3",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
