--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-hooks": "^2.3.0",
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.20",
+    "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.3",
@@ -17,6 +18,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-toast-notifications": "^2.4.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
